5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1637_2704.log
== SUBMITION (2019-04-09 11:02:21) 
-- CODE:
nota=float(input("entre com a nota do aluno: "))
boni=input("vai receber a bonificao: S/N")

if(boni.upper()== S):

	notafin= nota+(nota*0.10)
	print(notafin)
	
else:
	print(nota)
-- EXECUTION TIME:
0.13176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2704/main.py", line 4, in <module>
    if(boni.upper()== S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:25) 
-- CODE:
nota=float(input("entre com a nota do aluno: "))
boni=input("vai receber a bonificao: S/N")

if(boni.upper()== S):

	notafin= nota+(nota*0.10)
	print(notafin)
	
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(boni.upper()== S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:53) 
-- CODE:
nota=float(input("entre com a nota do aluno: "))
boni=input("vai receber a bonificao: S/N")

if(boni.upper()==S):

	notafin= nota+(nota*0.10)
	print(notafin)
	
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(boni.upper()==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:54) 
-- CODE:
nota=float(input("entre com a nota do aluno: "))
boni=input("vai receber a bonificao: S/N")

if(boni.upper()=="S"):

	notafin= nota+(nota*0.10)
	print(notafin)
	
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:06:14) 
-- CODE:
nota=float(input("entre com a nota do aluno: "))
boni=input("vai receber a bonificao: S/N")

if(boni.upper()=="S"):

	notafin= nota+(nota*0.10)
	print(notafin)
	
else:
	print(nota)
-- EXECUTION TIME:
0.19353
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
